--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -13,7 +13,8 @@
     <AssemblyName>snake</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>Windows</MonoGamePlatform>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -41,10 +42,20 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Cell.cs" />
+    <Compile Include="CellType.cs" />
+    <Compile Include="Common\TileMetrics.cs" />
     <Compile Include="Field.cs" />
+    <Compile Include="FieldFactory.cs" />
+    <Compile Include="Renderers\FieldRenderer.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Interfaces\IFieldFactory.cs" />
+    <Compile Include="Interfaces\IRenderer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderers\SnakeRenderer.cs" />
+    <Compile Include="Snake.cs" />
+    <Compile Include="Common\Direction.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Extended, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -66,13 +77,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Textures\LoseScreen_m.png" />
+    <Content Include="Content\Textures\StartScreen_m.png" />
+    <Content Include="Content\Textures\Textures_sp.png" />
+    <Content Include="Content\Textures\Vignette_m.png" />
+    <Content Include="Content\Textures\WinScreen_m.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
+    <None Include="app.config" />
     <None Include="app.manifest" />
+    <None Include="Content\Fonts\joystix monospace.ttf" />
+    <None Include="Content\Fonts\joystix.xnb" />
+    <None Include="Content\Textures\LoseScreen_m.xnb" />
+    <None Include="Content\Textures\StartScreen_m.xnb" />
+    <None Include="Content\Textures\Textures_sp.xnb" />
+    <None Include="Content\Textures\Vignette_m.xnb" />
+    <None Include="Content\Textures\WinScreen_m.xnb" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
