--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Common\TileMetrics.cs" />
     <Compile Include="Field.cs" />
     <Compile Include="FieldFactory.cs" />
+    <Compile Include="GameComponents\FPSCounter.cs" />
     <Compile Include="Renderers\FieldRenderer.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Interfaces\IFieldFactory.cs" />
