--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -42,11 +42,11 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Cell.cs" />
-    <Compile Include="CellType.cs" />
+    <Compile Include="GameEntities\Cell.cs" />
+    <Compile Include="GameEntities\CellType.cs" />
     <Compile Include="Common\TileMetrics.cs" />
-    <Compile Include="Field.cs" />
-    <Compile Include="FieldFactory.cs" />
+    <Compile Include="GameEntities\Field.cs" />
+    <Compile Include="GameEntities\FieldFactory.cs" />
     <Compile Include="GameComponents\FPSCounter.cs" />
     <Compile Include="Renderers\FieldRenderer.cs" />
     <Compile Include="Game1.cs" />
@@ -55,7 +55,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers\SnakeRenderer.cs" />
-    <Compile Include="Snake.cs" />
+    <Compile Include="GameEntities\Snake.cs" />
     <Compile Include="Common\Direction.cs" />
   </ItemGroup>
   <ItemGroup>
