--- a/snake/packages.config
+++ b/snake/packages.config
@@ -4,4 +4,7 @@
   <package id="MonoGame.Extended.Graphics" version="1.1.0" targetFramework="net45" />
   <package id="MonoGame.Extended.Input" version="1.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="NLog" version="4.6.2" targetFramework="net461" />
+  <package id="NLog.Config" version="4.6.2" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.6.2" targetFramework="net461" />
 </packages>
