--- a/snake/app.config
+++ b/snake/app.config
@@ -1,3 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+    </startup>
+    <appSettings>
+        <add key="IsLoggingEnabled" value="false"/>
+        <add key="IsRenderingEnabled" value="true"/>
+        <add key="IsDebugRenderingEnabled" value="true"/>
+    </appSettings>
+</configuration>
