--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -43,6 +43,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="GameComponents\InputHandler.cs" />
+    <Compile Include="Configuration\GameConfiguration.cs" />
     <Compile Include="GameEntities\Cell.cs" />
     <Compile Include="GameEntities\CellType.cs" />
     <Compile Include="Common\TileMetrics.cs" />
@@ -50,13 +51,17 @@
     <Compile Include="GameEntities\FieldFactory.cs" />
     <Compile Include="GameComponents\FPSCounter.cs" />
     <Compile Include="GameEntities\SnakeControls.cs" />
+    <Compile Include="Logging\ILogger.cs" />
+    <Compile Include="Logging\NLogFileLogger.cs" />
     <Compile Include="Renderers\FieldRenderer.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="Renderers\FieldRendererComponent.cs" />
+    <Compile Include="SnakeGame.cs" />
     <Compile Include="Interfaces\IFieldFactory.cs" />
     <Compile Include="Interfaces\IRenderer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Renderers\SnakeRenderer.cs" />
+    <Compile Include="Renderers\RenderConfiguration.cs" />
+    <Compile Include="Renderers\SnakeRendererComponent.cs" />
     <Compile Include="GameEntities\Snake.cs" />
     <Compile Include="Common\Direction.cs" />
   </ItemGroup>
@@ -116,9 +121,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Logging\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
