added SnakePart entity; reworked snake rendering; WIP reworking snake moving,

--- a/snake/app.config
+++ b/snake/app.config
@@ -7,5 +7,7 @@
         <add key="IsLoggingEnabled" value="false"/>
         <add key="IsRenderingEnabled" value="true"/>
         <add key="IsDebugRenderingEnabled" value="true"/>
+        <add key="ScreenWidth" value="1024"/>
+        <add key="ScreenHeight" value="500"/>
     </appSettings>
 </configuration>
