--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -53,6 +53,7 @@
     <Compile Include="GameComponents\FPSCounter.cs" />
     <Compile Include="GameEntities\GameKeys.cs" />
     <Compile Include="GameEntities\SnakeKeys.cs" />
+    <Compile Include="GameEntities\SnakePart.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\NLogFileLogger.cs" />
     <Compile Include="Renderers\FieldRendererComponent.cs" />
