--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -46,15 +46,16 @@
     <Compile Include="Common\DirectionHelper.cs" />
     <Compile Include="GameComponents\InputHandler.cs" />
     <Compile Include="Configuration\GameConfiguration.cs" />
-    <Compile Include="GameEntities\Cell.cs" />
-    <Compile Include="GameEntities\CellType.cs" />
+    <Compile Include="GameEntities\Field\Cell.cs" />
+    <Compile Include="GameEntities\Field\CellType.cs" />
     <Compile Include="Common\TileMetrics.cs" />
-    <Compile Include="GameEntities\Field.cs" />
-    <Compile Include="GameEntities\FieldFactory.cs" />
+    <Compile Include="GameEntities\Field\Field.cs" />
+    <Compile Include="GameEntities\Field\FieldFactory.cs" />
     <Compile Include="GameComponents\FPSCounter.cs" />
     <Compile Include="GameEntities\GameKeys.cs" />
-    <Compile Include="GameEntities\SnakeKeys.cs" />
-    <Compile Include="GameEntities\SnakePart.cs" />
+    <Compile Include="GameEntities\Snake\SnakeKeys.cs" />
+    <Compile Include="GameEntities\Snake\SnakePart.cs" />
+    <Compile Include="GameManager.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\NLogFileLogger.cs" />
     <Compile Include="Renderers\FieldRendererComponent.cs" />
@@ -65,7 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers\RenderConfiguration.cs" />
     <Compile Include="Renderers\SnakeRendererComponent.cs" />
-    <Compile Include="GameEntities\Snake.cs" />
+    <Compile Include="GameEntities\Snake\Snake.cs" />
     <Compile Include="Common\Direction.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -124,7 +125,9 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="GameEntities\Fruit\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
