--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -55,6 +55,7 @@
     <Compile Include="GameEntities\GameKeys.cs" />
     <Compile Include="GameEntities\Snake\SnakeKeys.cs" />
     <Compile Include="GameEntities\Snake\SnakePart.cs" />
+    <Compile Include="GameEntities\Snake\SnakeState.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\NLogFileLogger.cs" />
@@ -66,7 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers\RenderConfiguration.cs" />
     <Compile Include="Renderers\SnakeRendererComponent.cs" />
-    <Compile Include="GameEntities\Snake\Snake.cs" />
+    <Compile Include="GameEntities\Snake\SnakeComponent.cs" />
     <Compile Include="Common\Direction.cs" />
   </ItemGroup>
   <ItemGroup>
