--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -51,24 +51,29 @@
     <Compile Include="Common\TileMetrics.cs" />
     <Compile Include="GameEntities\Field\Field.cs" />
     <Compile Include="GameEntities\Field\FieldFactory.cs" />
-    <Compile Include="CommonComponents\FPSCounter.cs" />
+    <Compile Include="UIComponents\FPSCounter.cs" />
+    <Compile Include="GameEntities\Fruit\Fruit.cs" />
     <Compile Include="GameEntities\GameKeys.cs" />
     <Compile Include="GameEntities\Snake\SnakeKeys.cs" />
     <Compile Include="GameEntities\Snake\SnakePart.cs" />
     <Compile Include="GameEntities\Snake\SnakeState.cs" />
+    <Compile Include="GameEntities\ISprite.cs" />
     <Compile Include="GameManager.cs" />
+    <Compile Include="Interfaces\IRenderSettings.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\NLogFileLogger.cs" />
     <Compile Include="Renderers\FieldRendererComponent.cs" />
+    <Compile Include="Renderers\FruitRendererComponent.cs" />
     <Compile Include="SnakeGame.cs" />
     <Compile Include="Interfaces\IFieldFactory.cs" />
-    <Compile Include="Interfaces\IRenderer.cs" />
+    <Compile Include="Interfaces\IRenderer2D.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers\RenderConfiguration.cs" />
     <Compile Include="Renderers\SnakeRendererComponent.cs" />
     <Compile Include="GameEntities\Snake\SnakeComponent.cs" />
     <Compile Include="Common\Direction.cs" />
+    <Compile Include="UIComponents\KeyboardKeysComponent.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -126,9 +131,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GameEntities\Fruit\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
