added shared project, moving part of code here (WIP); added tests project; smooth snake moving WIP

--- a/snake/app.config
+++ b/snake/app.config
@@ -9,5 +9,7 @@
         <add key="IsDebugRenderingEnabled" value="true"/>
         <add key="ScreenWidth" value="1024"/>
         <add key="ScreenHeight" value="500"/>
+        <add key="TileWidth" value="50"/>
+        <add key="TileHeight" value="50"/>
     </appSettings>
 </configuration>
