--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -42,11 +42,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Common\BackToFrontLayers.cs" />
-    <Compile Include="Common\DirectionHelper.cs" />
     <Compile Include="CommonComponents\InputHandler.cs" />
-    <Compile Include="Configuration\GameSettings.cs" />
-    <Compile Include="Configuration\IGameSettings.cs" />
     <Compile Include="GameEntities\Field\Cell.cs" />
     <Compile Include="GameEntities\Field\CellType.cs" />
     <Compile Include="Common\TileMetrics.cs" />
@@ -73,7 +69,6 @@
     <Compile Include="Renderers\RenderSettings.cs" />
     <Compile Include="Renderers\SnakeRendererComponent.cs" />
     <Compile Include="GameEntities\Snake\SnakeComponent.cs" />
-    <Compile Include="Common\Direction.cs" />
     <Compile Include="UIComponents\KeyboardKeysComponent.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,7 +127,12 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\SnakeGame.Shared\SnakeGame.Shared.csproj">
+      <Project>{13f496df-77ce-4b0e-a99e-6a63854e8b51}</Project>
+      <Name>SnakeGame.Shared</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
