smooth moving implemented; move some classes to the shared project

--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -51,6 +51,9 @@
     <Compile Include="Common\Direction.cs" />
     <Compile Include="Common\DirectionHelper.cs" />
     <Compile Include="Common\LayerDepth.cs" />
+    <Compile Include="GameLogic\GameField\Cell.cs" />
+    <Compile Include="GameLogic\GameField\CellType.cs" />
+    <Compile Include="GameLogic\GameField\Field.cs" />
     <Compile Include="GameLogic\Snake\MovingCalculator.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
