added debug font; few refactoring; removed deprecated TileMetrics class

--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -54,6 +54,7 @@
     <Compile Include="GameLogic\GameField\Cell.cs" />
     <Compile Include="GameLogic\GameField\CellType.cs" />
     <Compile Include="GameLogic\GameField\Field.cs" />
+    <Compile Include="GameLogic\Interfaces\IFieldFactory.cs" />
     <Compile Include="GameLogic\Snake\MovingCalculator.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
