--- a/snake/app.config
+++ b/snake/app.config
@@ -9,7 +9,9 @@
         <add key="IsDebugRenderingEnabled" value="true"/>
         <add key="ScreenWidth" value="1024"/>
         <add key="ScreenHeight" value="500"/>
-        <add key="TileWidth" value="50"/>
-        <add key="TileHeight" value="50"/>
+        <add key="TileWidth" value="25"/>
+        <add key="TileHeight" value="25"/>
+        <add key="MapWidth" value="20"/>
+        <add key="MapHeight" value="10"/>
     </appSettings>
 </configuration>
