--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -43,7 +43,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CommonComponents\InputHandler.cs" />
-    <Compile Include="Common\TileMetrics.cs" />
     <Compile Include="GameEntities\Field\FieldFactory.cs" />
     <Compile Include="UIComponents\FPSCounter.cs" />
     <Compile Include="GameEntities\Fruit\Fruit.cs" />
@@ -58,7 +57,6 @@
     <Compile Include="Renderers\FieldRendererComponent.cs" />
     <Compile Include="Renderers\FruitRendererComponent.cs" />
     <Compile Include="SnakeGame.cs" />
-    <Compile Include="Interfaces\IFieldFactory.cs" />
     <Compile Include="Interfaces\IRenderer2D.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -108,6 +106,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.config" />
     <None Include="app.manifest" />
+    <None Include="Content\Fonts\debug-font.xnb" />
     <None Include="Content\Fonts\joystix monospace.ttf" />
     <None Include="Content\Fonts\joystix.xnb" />
     <None Include="Content\Textures\LoseScreen_m.xnb" />
