--- a/snake/app.config
+++ b/snake/app.config
@@ -6,12 +6,12 @@
     <appSettings>
         <add key="IsLoggingEnabled" value="true"/>
         <add key="IsRenderingEnabled" value="true"/>
-        <add key="IsDebugRenderingEnabled" value="true"/>
+        <add key="IsDebugRenderingEnabled" value="false"/>
         <add key="ScreenWidth" value="1024"/>
         <add key="ScreenHeight" value="500"/>
-        <add key="TileWidth" value="25"/>
-        <add key="TileHeight" value="25"/>
-        <add key="MapWidth" value="20"/>
+        <add key="TileWidth" value="50"/>
+        <add key="TileHeight" value="50"/>
+        <add key="MapWidth" value="10"/>
         <add key="MapHeight" value="10"/>
     </appSettings>
 </configuration>
