--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -51,6 +51,9 @@
     <Compile Include="Common\Direction.cs" />
     <Compile Include="Common\DirectionHelper.cs" />
     <Compile Include="Common\LayerDepth.cs" />
+    <Compile Include="GameLogic\Fruit\Fruit.cs" />
+    <Compile Include="GameLogic\Fruit\FruitManager.cs" />
+    <Compile Include="GameLogic\Fruit\IFruitManager.cs" />
     <Compile Include="GameLogic\GameField\Cell.cs" />
     <Compile Include="GameLogic\GameField\CellType.cs" />
     <Compile Include="GameLogic\GameField\Field.cs" />
@@ -60,6 +63,9 @@
     <Compile Include="GameLogic\Snake\SnakeState.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderers\FruitRendererComponent.cs" />
+    <Compile Include="Renderers\FruitRendererFactory.cs" />
+    <Compile Include="Renderers\IFruitRendererFactory.cs" />
     <Compile Include="Renderers\IRenderer2D.cs" />
     <Compile Include="Renderers\IRenderSettings.cs" />
     <Compile Include="Settings\GameSettings.cs" />
