--- a/snake/app.config
+++ b/snake/app.config
@@ -4,13 +4,13 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
     <appSettings>
-        <add key="IsLoggingEnabled" value="true"/>
+        <add key="IsLoggingEnabled" value="false"/>
         <add key="IsRenderingEnabled" value="true"/>
         <add key="IsDebugRenderingEnabled" value="false"/>
         <add key="ScreenWidth" value="1024"/>
         <add key="ScreenHeight" value="500"/>
-        <add key="TileWidth" value="50"/>
-        <add key="TileHeight" value="50"/>
+        <add key="TileWidth" value="100"/>
+        <add key="TileHeight" value="100"/>
         <add key="MapWidth" value="5"/>
         <add key="MapHeight" value="5"/>
     </appSettings>
