WIP global refactoring & rework

--- a/snake/app.config
+++ b/snake/app.config
@@ -4,9 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
     <appSettings>
-        <add key="IsLoggingEnabled" value="false"/>
+        <add key="IsLoggingEnabled" value="true"/>
         <add key="IsRenderingEnabled" value="true"/>
-        <add key="IsDebugRenderingEnabled" value="false"/>
+        <add key="IsDebugRenderingEnabled" value="true"/>
         <add key="ScreenWidth" value="1024"/>
         <add key="ScreenHeight" value="500"/>
         <add key="TileWidth" value="100"/>
