--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -74,6 +74,7 @@
     <Compile Include="GameLogic\Snake\Interfaces\ISnake.cs" />
     <Compile Include="GameLogic\Snake\Interfaces\ISnakeGameComponent.cs" />
     <Compile Include="GameLogic\Snake\Interfaces\ISnakeSegment.cs" />
+    <Compile Include="GameLogic\Snake\Snake.cs" />
     <Compile Include="GameLogic\Snake\SnakeGameComponent.cs" />
     <Compile Include="GameLogic\Snake\SnakeGraphicsComponent.cs" />
     <Compile Include="GameLogic\Snake\SnakeSegment.cs" />
@@ -84,9 +85,7 @@
     <Compile Include="Renderers\IRenderingSystem.cs" />
     <Compile Include="GameLogic\Snake\IMovingCalculator.cs" />
     <Compile Include="GameLogic\Snake\MovingCalculator.cs" />
-    <Compile Include="GameLogic\Snake\SnakeComponent.cs" />
     <Compile Include="GameLogic\Snake\SnakeControls.cs" />
-    <Compile Include="GameLogic\Snake\SnakePart.cs" />
     <Compile Include="GameLogic\Snake\SnakeState.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
