--- a/snake/app.config
+++ b/snake/app.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
     <appSettings>
-        <add key="IsLoggingEnabled" value="true"/>
+        <add key="IsLoggingEnabled" value="false"/>
         <add key="IsRenderingEnabled" value="true"/>
         <add key="IsDebugRenderingEnabled" value="true"/>
         <add key="ScreenWidth" value="1024"/>
