everything is broken

--- a/snake/app.config
+++ b/snake/app.config
@@ -13,5 +13,7 @@
         <add key="TileHeight" value="50"/>
         <add key="MapWidth" value="10"/>
         <add key="MapHeight" value="10"/>
+        <add key="DefaultSnakeMovingTime" value="250"/>
+        <add key="DefaultMoveIntervalTime" value="500"/>
     </appSettings>
 </configuration>
