--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -73,33 +73,32 @@
     <Compile Include="GameLogic\GameField\Interfaces\IGameFieldFactory.cs" />
     <Compile Include="GameLogic\Snake\Interfaces\ISnake.cs" />
     <Compile Include="GameLogic\Snake\Interfaces\ISnakeGameComponent.cs" />
+    <Compile Include="GameLogic\Snake\Interfaces\ISnakeMovement.cs" />
     <Compile Include="GameLogic\Snake\Interfaces\ISnakeSegment.cs" />
     <Compile Include="GameLogic\Snake\Snake.cs" />
     <Compile Include="GameLogic\Snake\SnakeGameComponent.cs" />
     <Compile Include="GameLogic\Snake\SnakeGraphicsComponent.cs" />
+    <Compile Include="GameLogic\Snake\SnakeMovement.cs" />
     <Compile Include="GameLogic\Snake\SnakeSegment.cs" />
-    <Compile Include="Renderers\IGraphics2DComponent.cs" />
+    <Compile Include="Graphics\IGraphics2DComponent.cs" />
     <Compile Include="GameLogic\GameField\CellType.cs" />
     <Compile Include="GameLogic\GameManager.cs" />
     <Compile Include="GameLogic\IGameManager.cs" />
-    <Compile Include="Renderers\IRenderingSystem.cs" />
+    <Compile Include="Graphics\IGraphicsSystem.cs" />
     <Compile Include="GameLogic\Snake\IMovingCalculator.cs" />
     <Compile Include="GameLogic\Snake\MovingCalculator.cs" />
     <Compile Include="GameLogic\Snake\SnakeControls.cs" />
     <Compile Include="GameLogic\Snake\SnakeState.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Renderers\IRenderer2D.cs" />
-    <Compile Include="Renderers\IRenderSettings.cs" />
-    <Compile Include="Renderers\RenderingSystem.cs" />
+    <Compile Include="Graphics\IGraphicsSettings.cs" />
+    <Compile Include="Graphics\GraphicsSystem.cs" />
     <Compile Include="Settings\GameSettings.cs" />
     <Compile Include="Settings\IGameSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Graphics\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
