full screen parameter added;

--- a/snake/app.config
+++ b/snake/app.config
@@ -7,12 +7,13 @@
         <add key="IsLoggingEnabled" value="false"/>
         <add key="IsRenderingEnabled" value="true"/>
         <add key="IsDebugRenderingEnabled" value="true"/>
-        <add key="ScreenWidth" value="1024"/>
-        <add key="ScreenHeight" value="500"/>
+        <add key="ScreenWidth" value="800"/>
+        <add key="ScreenHeight" value="600"/>
+        <add key="IsFullScreen" value="true"/>
         <add key="TileSize" value="40"/>
-        <add key="MapWidth" value="15"/>
-        <add key="MapHeight" value="12"/>
-        <add key="DefaultSnakeMovingTime" value="250"/>
+        <add key="MapWidth" value="10"/>
+        <add key="MapHeight" value="10"/>
         <add key="DefaultMoveIntervalTime" value="800"/>
+        <add key="LimitMoveIntervalTime" value="100"/>
     </appSettings>
 </configuration>
