--- a/snake/app.config
+++ b/snake/app.config
@@ -9,7 +9,7 @@
         <add key="IsDebugRenderingEnabled" value="true"/>
         <add key="ScreenWidth" value="800"/>
         <add key="ScreenHeight" value="600"/>
-        <add key="IsFullScreen" value="true"/>
+        <add key="IsFullScreen" value="false"/>
         <add key="TileSize" value="40"/>
         <add key="MapWidth" value="10"/>
         <add key="MapHeight" value="10"/>
