--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -99,8 +99,8 @@
     <Compile Include="Graphics\IGraphicsSettings.cs" />
     <Compile Include="Graphics\GraphicsSystem.cs" />
     <Compile Include="SceneManagement\IScene.cs" />
-    <Compile Include="Settings\GameSettings.cs" />
-    <Compile Include="Settings\IGameSettings.cs" />
+    <Compile Include="Settings\Implementation\GameSettings.cs" />
+    <Compile Include="Settings\Interfaces\IGameSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
