Added RemainingLives UI component;

--- a/snake/app.config
+++ b/snake/app.config
@@ -15,5 +15,6 @@
         <add key="MapHeight" value="10"/>
         <add key="DefaultMoveIntervalTime" value="800"/>
         <add key="LimitMoveIntervalTime" value="150"/>
+        <add key="RemainingLives" value="3"/>
     </appSettings>
 </configuration>
