--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIComponents\PointsCounterComponent.cs" />
+    <Compile Include="UIComponents\RemainingLivesComponent.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
