Added big font asset; WIP Scene management prototype;

--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -95,6 +95,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="app.manifest" />
+    <None Include="Content\Fonts\big.xnb" />
     <None Include="Content\Fonts\debug-font.xnb" />
     <None Include="Content\Fonts\joystix monospace.ttf" />
     <None Include="Content\Fonts\joystix.xnb" />
