--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -98,9 +98,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Graphics\IGraphicsSettings.cs" />
     <Compile Include="Graphics\GraphicsSystem.cs" />
+    <Compile Include="SceneManagement\BaseScene.cs" />
+    <Compile Include="SceneManagement\GameScene.cs" />
     <Compile Include="SceneManagement\IScene.cs" />
+    <Compile Include="SceneManagement\ISceneManager.cs" />
+    <Compile Include="SceneManagement\LoadingScene.cs" />
+    <Compile Include="SceneManagement\SceneManager.cs" />
+    <Compile Include="Settings\Implementation\GameKeys.cs" />
     <Compile Include="Settings\Implementation\GameSettings.cs" />
+    <Compile Include="Settings\Interfaces\IGameKeys.cs" />
     <Compile Include="Settings\Interfaces\IGameSettings.cs" />
+    <Compile Include="UIComponents\DebugInfoPanelComponent.cs" />
+    <Compile Include="UIComponents\FPSCounter.cs" />
+    <Compile Include="UIComponents\PointsCounterComponent.cs" />
+    <Compile Include="UIComponents\RemainingLivesComponent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
