--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Effects\grayscale.fx" />
     <Content Include="Content\Textures\LoseScreen_m.png" />
     <Content Include="Content\Textures\StartScreen_m.png" />
     <Content Include="Content\Textures\Textures_sp.png" />
@@ -90,6 +91,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="app.manifest" />
+    <None Include="Content\Effects\grayscale.xnb" />
     <None Include="Content\Fonts\big.xnb" />
     <None Include="Content\Fonts\debug-font.xnb" />
     <None Include="Content\Fonts\joystix monospace.ttf" />
@@ -113,6 +115,7 @@
       <Name>SnakeGame.Shared</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
