--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -94,6 +94,7 @@
     <Compile Include="GameLogic\Snake\MovingCalculator.cs" />
     <Compile Include="GameLogic\Snake\SnakeControls.cs" />
     <Compile Include="GameLogic\Snake\SnakeState.cs" />
+    <Compile Include="Graphics\ISpriteBatchManager.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Graphics\IGraphicsSettings.cs" />
