--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -57,9 +57,9 @@
     <Compile Include="Common\ResourceManagers\ITextureManager.cs" />
     <Compile Include="Common\LayerDepth.cs" />
     <Compile Include="Common\ResourceManagers\TextureManager.cs" />
-    <Compile Include="GameLogic\Food\Food.cs" />
+    <Compile Include="GameLogic\Food\FoodEntity.cs" />
     <Compile Include="GameLogic\Food\FoodManager.cs" />
-    <Compile Include="GameLogic\Food\Interfaces\IFood.cs" />
+    <Compile Include="GameLogic\Food\Interfaces\IFoodEntity.cs" />
     <Compile Include="GameLogic\Food\Interfaces\IFoodManager.cs" />
     <Compile Include="GameLogic\Food\FoodGraphicsComponent.cs" />
     <Compile Include="GameLogic\Food\FoodComponent.cs" />
