WIP graphics system rework;

--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -66,20 +66,21 @@
     <Compile Include="GameLogic\Food\Interfaces\IFoodGameComponent.cs" />
     <Compile Include="GameLogic\GameField\Cells\Cell.cs" />
     <Compile Include="GameLogic\GameField\Cells\Interfaces\ICell.cs" />
-    <Compile Include="GameLogic\GameField\GameField.cs" />
+    <Compile Include="GameLogic\GameField\GameFieldEntity.cs" />
     <Compile Include="GameLogic\GameField\GameFieldComponent.cs" />
     <Compile Include="GameLogic\GameField\GameFieldFactory.cs" />
     <Compile Include="GameLogic\GameField\GameFieldGraphicsComponent.cs" />
-    <Compile Include="GameLogic\GameField\Interfaces\IGameField.cs" />
+    <Compile Include="GameLogic\GameField\Interfaces\IGameFieldEntity.cs" />
     <Compile Include="GameLogic\GameField\Interfaces\IGameFieldComponent.cs" />
+    <Compile Include="GameLogic\GameField\Interfaces\IGameFieldGraphicsComponent.cs" />
     <Compile Include="GameLogic\GameField\Interfaces\IGameFieldFactory.cs" />
     <Compile Include="GameLogic\GamePoints.cs" />
     <Compile Include="GameLogic\IGamePoints.cs" />
-    <Compile Include="GameLogic\Snake\Interfaces\ISnake.cs" />
+    <Compile Include="GameLogic\Snake\Interfaces\ISnakeEntity.cs" />
     <Compile Include="GameLogic\Snake\Interfaces\ISnakeGameComponent.cs" />
     <Compile Include="GameLogic\Snake\Interfaces\ISnakeMovementComponent.cs" />
     <Compile Include="GameLogic\Snake\Interfaces\ISnakeSegment.cs" />
-    <Compile Include="GameLogic\Snake\Snake.cs" />
+    <Compile Include="GameLogic\Snake\SnakeEntity.cs" />
     <Compile Include="GameLogic\Snake\SnakeGameComponent.cs" />
     <Compile Include="GameLogic\Snake\SnakeGraphicsComponent.cs" />
     <Compile Include="GameLogic\Snake\SnakeMovementComponent.cs" />
