--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -92,12 +92,12 @@
     <Compile Include="GameLogic\GameManager.cs" />
     <Compile Include="GameLogic\IGameManager.cs" />
     <Compile Include="Graphics\IGraphicsSystem.cs" />
-    <Compile Include="GameLogic\Snake\IMovingCalculator.cs" />
+    <Compile Include="GameLogic\Snake\Interfaces\IMovingCalculator.cs" />
     <Compile Include="GameLogic\Snake\MovingCalculator.cs" />
     <Compile Include="GameLogic\Snake\SnakeControlKeys.cs" />
     <Compile Include="GameLogic\Snake\SnakeState.cs" />
     <Compile Include="Graphics\ISpriteBatchManager.cs" />
-    <Compile Include="Logging\ILogger.cs" />
+    <Compile Include="Logging\IGameLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Graphics\IGraphicsSettings.cs" />
     <Compile Include="Graphics\GraphicsSystem.cs" />
