--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Effects\dark.fx" />
     <Content Include="Content\Effects\grayscale.fx" />
     <Content Include="Content\Textures\LoseScreen_m.png" />
     <Content Include="Content\Textures\StartScreen_m.png" />
