--- a/SnakeGame.Shared/packages.config
+++ b/SnakeGame.Shared/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MonoGame.Extended" version="1.1.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="MonoGame.Extended" version="3.7.0" targetFramework="net461" />
+  <package id="MonoGame.Extended.Animations" version="3.7.0" targetFramework="net461" />
+  <package id="MonoGame.Extended.Entities" version="3.7.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
 </packages>
