--- a/SnakeGame.Shared/SnakeGame.Shared.csproj
+++ b/SnakeGame.Shared/SnakeGame.Shared.csproj
@@ -63,6 +63,9 @@
     <Compile Include="Common\ResourceManagers\ITextureManager.cs" />
     <Compile Include="Common\LayerDepth.cs" />
     <Compile Include="Common\ResourceManagers\TextureManager.cs" />
+    <Compile Include="ECS\CollisionSystem.cs" />
+    <Compile Include="ECS\EntityFactory.cs" />
+    <Compile Include="ECS\RenderSystem.cs" />
     <Compile Include="GameLogic\Food\FoodEntity.cs" />
     <Compile Include="GameLogic\Food\FoodManager.cs" />
     <Compile Include="GameLogic\Food\Interfaces\IFoodEntity.cs" />
