--- a/SnakeGame.Shared/packages.config
+++ b/SnakeGame.Shared/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="MonoGame.Extended" version="3.7.0" targetFramework="net461" />
   <package id="MonoGame.Extended.Animations" version="3.7.0" targetFramework="net461" />
+  <package id="MonoGame.Extended.Collisions" version="3.7.0" targetFramework="net461" />
   <package id="MonoGame.Extended.Entities" version="3.7.0" targetFramework="net461" />
   <package id="MonoGame.Extended.Graphics" version="3.7.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
